@@ -3,6 +3,8 @@
         * configure.py [openindiana]: INSTALL_CMD was changed to INSTALL in
             Makefile.static at version 0.1.17.  I forgot to change it in
             configure.py as well.
+        * anonymine_engine.py [Minix]: Guess what, Python 2.7 on Minix 3.3
+            has no math module. Created a really dumb replacement.
     0.2.29
         * INSTALL: Windows notice removed. Added less(1) as a weak dependency.
         * `make dist`: Include "testcfg" as it's needed by something in
